# quickmath

./: LICENSE  README.md  pyproject.toml
src/quickmath/: __init__.py  cli.py  core.py
tests/: test_core.py
